--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+        "axios": "^0.24",
+        "cross-env": "^7.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17",
+        "vee-validate": "^2.2.15",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-router": "^3.5.3",
+        "vue-scrollto": "^2.20.0",
+        "sass-loader": "^11.1",
+        "sass": "^1.32"
+      },
+      "dependencies": {
+        "es6-promise": "^4.2",
+        "vue-template-compiler": "^2.6.14"
+      }
 }
