--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "fruitcake/laravel-cors": "^2.0.5",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "ext-dom": "*",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.0",
+        "intervention/image": "^2.4",
+        "laravel/framework": "^9.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
+        "beyondcode/laravel-dump-server": "^1.8",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "laravel/tinker": "^2.0",
+        "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
