--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
-    },
-    "devDependencies": {
-        "axios": "^0.24",
-        "cross-env": "^7.0",
-        "jquery": "^3.6",
-        "laravel-mix": "^6.0.49",
-        "lodash": "^4.17",
-        "vee-validate": "^2.2.15",
-        "vue": "^2.6.14",
-        "vue-loader": "^15.9.8",
-        "vue-router": "^3.5.3",
-        "vue-scrollto": "^2.20.0",
-        "sass-loader": "^11.1",
-        "sass": "^1.32"
-      },
-      "dependencies": {
-        "es6-promise": "^4.2",
-        "vue-template-compiler": "^2.6.14"
-      }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env node_modules/webpack/bin/webpack.js build --node-env=development --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "npm run watch",
+    "prod": "npm run production",
+    "production": "cross-env node_modules/webpack/bin/webpack.js build --node-env=production --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.24",
+    "cross-env": "^7.0",
+    "jquery": "^3.6",
+    "laravel-mix": "^6.0.49",
+    "lodash": "^4.17",
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-router": "^3.5.3",
+    "vue-scrollto": "^2.20.0",
+    "sass-loader": "^11.1",
+    "sass": "^1.32"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2",
+    "vue-template-compiler": "^2.6.14"
+  }
 }
